added the next button in a container and write the javaScript code for next button

--- a/questions.html
+++ b/questions.html
@@ -11,10 +11,14 @@
     <div class="js-mcq-container">
 
     </div>
+
+
+    <div class="next-button-container">
+      <button class="next-button js-next-button">
+        Next
+      </button>
+    </div>
     
-    <button class="next-button js-next-button">
-      Next
-    </button>
 
   </div>
   <script type="module" src="scripts/quiz.js"></script>
